@@ -15,6 +15,7 @@ Broker:
   supported. Closes #2122.
 - Add kqueue support.
 - Enforce receive maximum on MQTT v5.
+- Report on what compile time options are available. Closes #2193.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
